WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96994
[BlackBerry] Get infinite amount of requests after attempting re-authentication basic.
https://bugs.webkit.org/show_bug.cgi?id=96994
Summary
[BlackBerry] Get infinite amount of requests after attempting re-authenticati...
Jason Liu
Reported
2012-09-18 01:49:30 PDT
We should pop a dialog for user name and password again if the stored credential is invalid.
Attachments
Patch
(5.54 KB, patch)
2012-09-18 02:44 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Patch
(1.88 KB, patch)
2012-09-19 00:33 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jason Liu
Comment 1
2012-09-18 02:44:45 PDT
Created
attachment 164520
[details]
Patch
Jason Liu
Comment 2
2012-09-19 00:33:30 PDT
Created
attachment 164680
[details]
Patch
Rob Buis
Comment 3
2012-09-19 07:23:39 PDT
Comment on
attachment 164680
[details]
Patch Ok.
WebKit Review Bot
Comment 4
2012-09-19 19:04:43 PDT
Comment on
attachment 164680
[details]
Patch Clearing flags on attachment: 164680 Committed
r129084
: <
http://trac.webkit.org/changeset/129084
>
WebKit Review Bot
Comment 5
2012-09-19 19:04:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug