[BlackBerry] Get infinite amount of requests after attempting re-authentication basic. https://bugs.webkit.org/show_bug.cgi?id=96994

Reviewed by Rob Buis.

We should remove the wrong credentials before calling sendRequestWithCredentials again.
#PR 200226
Reviewed internally by Jonathan Dong.

No new tests. It is covered by ManualTests/blackberry/http-auth-challenge.html.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::notifyAuthReceived):


Canonical link: https://commits.webkit.org/115136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129084 268f45cc-cd09-0410-ab3c-d52691b4dbfc